[package]
name = "rust-td"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.228"
tokio = { version = "1.47.1", features = ["full"] }
rand = "0.9.2"
chrono = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "time", "bigdecimal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
